--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -7,21 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <link href="
-https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
-" rel="stylesheet">
     <link rel="stylesheet" href="../scss/style.min.css">
     <title>ATM24</title>
 </head>
 
 <body>
     <!--=include header.html -->
-    <!--=include main.html -->
+    <main class="main">
+        <!--=include main.html -->
+    </main>
     <!--=include footer.html -->
-    <script src="
-https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
-"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.15.4/dist/cdn.min.js"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
     <script src="../js/main.min.js"></script>
 </body>
 
